--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,12 +23,12 @@ target_link_libraries(main_executable PRIVATE m)
 target_compile_options(main_executable PRIVATE ${COMMON_COMPILE_OPTIONS})
 
 find_package(OpenMP REQUIRED)
-add_executable(main_executable_openmp src/openmp_main.c)
+add_executable(main_executable_openmp src/c_openmp.c)
 target_link_libraries(main_executable_openmp PRIVATE OpenMP::OpenMP_C m)
 target_compile_options(main_executable_openmp PRIVATE ${COMMON_COMPILE_OPTIONS})
 
 find_package(MPI REQUIRED)
-add_executable(main_executable_mpi src/mpi_main.c)
+add_executable(main_executable_mpi src/c_mpi.c)
 target_link_libraries(main_executable_mpi PRIVATE MPI::MPI_C -lm)
 target_compile_options(main_executable_mpi PRIVATE ${COMMON_COMPILE_OPTIONS})
 
@@ -36,7 +36,7 @@ set(THREADS_PREFER_PTHREAD_FLAG ON)
 find_package(Threads REQUIRED)
 SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -pthread")
 
-add_executable(main_executable_posix src/posix_main.c)
+add_executable(main_executable_posix src/c_pthreads.c)
 target_link_libraries(main_executable_posix PRIVATE 
     m
     pthread 
